# RepoMind

./: .gitignore  README.md  SETUP.md  VIDEO_SCRIPT.md  config.cognee.yaml  config.example.yaml  pyproject.toml
docs/: LOCAL_COGNEE.md  SECURITY_REVIEW.md
integrations/n8n/: README.md
presentation/: RepoMind-deck.html  RepoMind-video-script.md  RepoMind.md  RepoMind.slides.json
scripts/: cognee_ollama_smoke.py  demo.sh  demo_cognee.sh
src/repomind/: __init__.py  api.py  auth.py  cli.py  config.py  engine.py  ids.py  models.py  query.py  state.py  webhook.py
src/repomind/graph/: __init__.py  cognee_cloud_store.py  cognee_store.py  store.py
src/repomind/pipeline/: __init__.py  ingest.py  queue.py  resolver.py
src/repomind/sources/: __init__.py  base.py  chat.py  discord_bot_source.py  discord_source.py  git_source.py  github_source.py  slack_source.py
src/repomind/ui/: app.js  index.html  styles.css
tests/: conftest.py  fakes.py  test_api.py  test_api_scopes.py  test_api_security.py  test_auth.py  test_chat.py  test_cli.py  test_cognee_cloud_store.py  test_cognee_store.py  test_config.py  test_discord_bot_source.py  test_discord_source.py  test_engine_sync.py  test_git_source.py  test_github_source.py  test_ids.py  test_ingest.py  test_ingest_endpoints.py  test_query.py  test_resolver.py  test_resolver_branches.py  test_slack_source.py  test_store.py  test_ui.py  test_webhook.py  test_worker_state.py
