[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repomind"
version = "0.1.0"
description = "Give a Git repository a brain: a typed knowledge graph of commits, PRs, issues, people, decisions, and chat, powered by Cognee."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "PyGithub>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
cognee = ["cognee>=0.1.20", "transformers>=4.40"]
slack = ["slack_sdk>=3.27"]
discord = ["discord.py>=2.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
repomind = "repomind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repomind"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# These fields hold the NAMES of environment variables (e.g. "GITHUB_TOKEN"),
# not secrets themselves. Secrets are read from the environment at runtime.
"src/repomind/config.py" = ["S105"]
